Update day1.md