@@ -92,14 +92,14 @@
         <img src='https://github.com/2023-12-JAVA-DEVELOPER-149/01.JAVA_FUNDMENTAL/assets/75401545/08824a00-c4f7-4b71-aff1-d10e056f3894' width='70%' height='20%'/>
 
       - Restart Now버튼 클릭
-        
-        <img src='https://github.com/2023-12-JAVA-DEVELOPER-149/01.JAVA_FUNDMENTAL/assets/75401545/baf8bf42-4528-454b-aea5-15b610851cf9' width='70%' height='20%'/>
+
+        <img src=' https://github.com/2023-12-JAVA-DEVELOPER-149/01.JAVA_FUNDMENTAL/assets/75401545/e425572d-a847-4f23-a824-0a8f6bbf15a4' width='70%' height='20%'/>
       
-      - 이클립스 UML 플러그인설치
+      - eclipse.ini 파일열기
         
        <img src='https://github.com/2023-12-JAVA-DEVELOPER-149/01.JAVA_FUNDMENTAL/assets/75401545/849f75f3-e840-4ea5-8a5b-7333c5216206' width='70%' height='20%'/>
 
-      - 이클립스 UML 플러그인설치
+      - eclipse.ini 맨마지막에 추가( --add-opens=java.desktop/java.beans=ALL-UNNAMED )
         
         <img src='https://github.com/2023-12-JAVA-DEVELOPER-149/01.JAVA_FUNDMENTAL/assets/75401545/cc65adb1-b00e-42c7-bcb5-3b4cacf1b5fe' width='70%' height='20%'/> 
 
